luv.opam: remove pointless constraint on dune

--- a/luv.opam
+++ b/luv.opam
@@ -11,7 +11,7 @@ dev-repo: "git+https://github.com/aantron/luv.git"
 depends: [
   "base-unix"
   "ctypes" {>= "0.13.0"}
-  "dune" {build & >= "1.0.0"}
+  "dune" {build}
   # Sys.opaque_identity requires 4.03. luv should be ported to 4.02, but it's
   # best to wait until CI is set up, as otherwise we are likely to never test
   # on 4.02, and gradually lose compatibility.
