--- a/luv_lwt.opam
+++ b/luv_lwt.opam
@@ -1,1 +1,21 @@
-# TODO
+opam-version: "2.0"
+
+version: "dev"
+license: "MIT"
+homepage: "https://github.com/aantron/luv"
+bug-reports: "https://github.com/aantron/luv/issues"
+authors: "Anton Bachin <antonbachin@yahoo.com>"
+maintainer: "Anton Bachin <antonbachin@yahoo.com>"
+dev-repo: "git+https://github.com/aantron/luv.git"
+
+depends: [
+  "dune" {build}
+  "luv"
+  "lwt" {>= "2.4.0"}
+]
+
+build: [
+  ["dune" "build" "-p" name "-j" jobs]
+]
+
+synopsis: "Luv (a libuv binding) with an Lwt promise-based API"
