--- a/src/c/dune
+++ b/src/c/dune
@@ -6,9 +6,8 @@
  (modules Luv_c_generated_functions)
  (c_names c_generated_functions helpers)
  (libraries ctypes luv_c_function_descriptions threads)
- (c_flags (:standard "-I %{project_root}/../../src/vendor/libuv/include"))
- (c_library_flags
-  (:standard -L%{project_root}/src/vendor/libuv/out/Release -luv -lpthread)))
+ (c_flags (:standard "-I ../vendor/libuv/include"))
+ (c_library_flags (:standard -Lsrc/vendor -luv -lpthread)))
 
 
 
@@ -41,7 +40,7 @@
   %{cc} %{c} \
   -I `dirname %{lib:ctypes:ctypes_cstubs_internals.h}` \
   -I %{ocaml_where} \
-  -I %{project_root}/../../src/vendor/libuv/include -o %{targets}")))
+  -I ../vendor/libuv/include -o %{targets}")))
 
 (rule
  (targets luv_c_generated_types.ml)
