API docs progress

--- a/luv.opam
+++ b/luv.opam
@@ -23,7 +23,7 @@ depends: [
   "alcotest" {dev & >= "0.8.1"}
   "lwt" {dev & >= "2.4.0"}
   "lwt_ppx" {dev}
-  "odoc" {dev}
+  "odoc" {dev & = "1.4.2"}
   "reason" {dev}
   "promise" {dev & >= "1.0.0"}
 ]
