List development dependencies properly in luv.opam

--- a/luv.opam
+++ b/luv.opam
@@ -20,6 +20,15 @@ depends: [
   "result"
 
   "alcotest" {dev & >= "0.8.1"}
+  "lwt" {dev & >= "2.4.0"}
+  "lwt_ppx" {dev}
+  "odoc" {dev}
+  "reason" {dev}
+  "repromise" {dev & >= "0.6.0"}
+]
+
+pin-depends: [
+  ["repromise.git" "git+https://github.com/aantron/repromise.git"]
 ]
 
 build: [
