Dune should no longer be tagged build-only
See https://github.com/ocaml/opam-repository/pull/14266.

--- a/luv.opam
+++ b/luv.opam
@@ -15,7 +15,7 @@ depends: [
   "base-unix"
   "conf-python-2-7" {build}
   "ctypes" {>= "0.13.0"}
-  "dune" {build}
+  "dune"
   "ocaml" {>= "4.02.0"}
   "result"
 
