--- a/luv_lwt.opam
+++ b/luv_lwt.opam
@@ -12,7 +12,7 @@ maintainer: "Anton Bachin <antonbachin@yahoo.com>"
 dev-repo: "git+https://github.com/aantron/luv.git"
 
 depends: [
-  "dune" {build}
+  "dune"
   "luv"
   "lwt" {>= "2.4.0"}
 ]
