--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: generic
 matrix:
   include:
     - os: linux
-      env: COMPILER=4.02.3
+      env: COMPILER=4.02.3 REVDEPS=yes
     - os: linux
       env: COMPILER=4.08.1
     - os: osx
@@ -25,7 +25,7 @@ script:
   - make
   - make test
   - make test-examples
-  - make test-installation-ci
+  - "[ $REVDEPS != yes ] || make test-installation-ci"
   - opam lint .
 
 before_cache:
