--- a/.travis.yml
+++ b/.travis.yml
@@ -22,13 +22,13 @@ before_script:
   - opam install -y --deps-only ./luv.opam
 
 script:
-  - "[ ! -d _cache/_build ] || cp -r _cache/_build ."
+  - '[ ! -d _cache/_build ] || cp -r _cache/_build .'
   - make
   - make test
   - make test-examples
   - mkdir -p _cache
-  - "[ -d _cache/_build ] || cp -r _build _cache"
-  - "[ $REVDEPS != yes ] || make test-installation-ci"
+  - '[ -d _cache/_build ] || cp -r _build _cache'
+  - '[ "$REVDEPS" != yes ] || make test-installation-ci'
   - opam lint .
 
 before_cache:
