--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ script:
   - '[ ! -d _cache/_build ] || cp -r _cache/_build .'
   - make
   - make test
-  - make test-examples
+  - '[ "$REVDEPS" != yes ] || make test-examples'
   - mkdir -p _cache
   - '[ -d _cache/_build ] || cp -r _build _cache'
   - '[ "$REVDEPS" != yes ] || make test-installation-ci'
