--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,7 @@ before_script:
 
 script:
   - '[ ! -d _cache/_build ] || cp -r _cache/_build .'
-  - make
-  - make test
+  - make test-ci
   - '[ "$REVDEPS" != yes ] || make test-examples'
   - mkdir -p _cache
   - '[ -d _cache/_build ] || cp -r _build _cache'
