Eliminate mention of module Result from signatures
This allows simplifying the emitted documentation on < 4.02 by removing
-open Result from src/dune.

--- a/src/dune
+++ b/src/dune
@@ -2,4 +2,4 @@
  (name luv)
  (public_name luv)
  (libraries luv.c luv.syntax result)
- (flags (:standard -w -49)))
+ (flags (:standard -w -49 -open Result)))
