--- a/.travis.yml
+++ b/.travis.yml
@@ -45,6 +45,8 @@ before_script:
   - |
     if [ ! -d _cache/_build ]
     then
+      # Workaround for https://github.com/ocaml/dune/issues/3054.
+      opam install -y --unset-root dune.2.0.1
       opam pin add -y --dev-repo bisect_ppx
       opam pin add -y promise git+https://github.com/aantron/promise.git
       opam install -y --deps-only ./luv.opam
