--- a/.travis.yml
+++ b/.travis.yml
@@ -50,8 +50,8 @@ before_script:
 
 script:
   - '[ ! -d _cache/_build ] || cp -r _cache/_build .'
-  - make test-ci
-  - '[ "$REVDEPS" != yes ] || make test-examples'
+  - make test
+  - '[ "$REVDEPS" != yes ] || make examples'
   - mkdir -p _cache
   - '[ -d _cache/_build ] || cp -r _build _cache'
   - '[ "$REVDEPS" != yes ] || make test-installation-ci'
