Remove all experimental modules

--- a/src/dune
+++ b/src/dune
@@ -1,5 +1,5 @@
 (library
  (name luv)
  (public_name luv)
- (libraries luv.c luv.syntax result)
+ (libraries luv.c result)
  (flags (:standard -w -49 -open Result)))
