--- a/luv.opam
+++ b/luv.opam
@@ -20,11 +20,12 @@ depends: [
   "ocaml" {>= "4.02.0"}
   "result"
 
-  "alcotest" {dev & >= "0.8.1"}
+  "alcotest" {with-test & >= "0.8.1"}
 ]
 
 build: [
   ["dune" "build" "-p" name "-j" jobs]
+  ["dune" "runtest" "-p" name] {with-test}
 ]
 
 description: "Luv is a binding to libuv, the cross-platform C library that does
