Upgrade gyp and switch to Python 3
See recent commits at

  https://chromium.googlesource.com/external/gyp

--- a/luv.opam
+++ b/luv.opam
@@ -14,7 +14,7 @@ dev-repo: "git+https://github.com/aantron/luv.git"
 
 depends: [
   "base-unix" {build}
-  "conf-python-2-7" {build}
+  "conf-python-3" {build}
   "ctypes" {>= "0.13.0"}
   "dune" {>= "2.0.0"}
   "ocaml" {>= "4.02.0"}
