--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,7 @@ before_script:
   - cc --version || true
   - gcc --version || true
   - clang --version || true
+  - python3 --version
   - |
     if [ ! -d _cache/_build ]
     then
