Build: Get esy build green across platforms
* Add esy build integration

* Bring in include file too

* Update build to support windows

* Add windows TODO comments

* Additional tweaks to unblock Win

* Get subset of green tests

* Fix libuv dependency

* Get building w/o example for now

* Install libtool on OSX

--- a/package.json
+++ b/package.json
@@ -22,16 +22,18 @@
   },
   "dependencies": {
     "@opam/dune": "^2.0.0",
+    "@opam/dune-configurator": "^2.0.0",
     "ocaml": ">=4.2.0",
     "@opam/ctypes": "0.15.1",
     "@opam/ctypes-foreign": "0.4.0",
-    "esy-libuv": "github:revery-ui/esy-libuv#39e3ef0"
+    "esy-libuv": "github:revery-ui/esy-libuv#89d293b"
   },
   "resolutions": {
     "@esy-ocaml/libffi": "esy-ocaml/libffi#c61127d",
     "esy-cmake": "prometheansacrifice/esy-cmake#2a47392def"
   },
   "devDependencies": {
-    "ocaml": "~4.8.0"
+    "ocaml": "~4.8.0",
+    "@opam/alcotest": "*"
   }
 }
