--- a/src/c/dune
+++ b/src/c/dune
@@ -5,34 +5,38 @@
  (wrapped false)
  (modules Luv_c_generated_functions)
  (libraries ctypes luv_c_function_descriptions threads)
+ (flags (:include flags.sexp))
+ ;(c_library_flags -ccopt -luv -ccopt -l/Users/bryphe/luv/_esy/default/store/i/esy_libuv-0effda09/lib)
+ ;(library_flags -ccopt -luv -ccopt -l/Users/bryphe/luv/_esy/default/store/i/esy_libuv-0effda09/lib)
  (foreign_stubs
   (language c)
-  (names c_generated_functions helpers)
-  (include_dirs vendor/libuv/include))
- (foreign_archives uv))
+  (flags (:include c_flags.sexp))
+  (names c_generated_functions helpers)))
+;  (include_dirs vendor/libuv/include))
+; (foreign_archives uv))
 
 
 
 ; The vendored libuv.
-(rule
- (targets libuv.a dlluv.so)
- (deps (source_tree vendor) link-gyp.ml copy-so.ml)
- (action (progn
-  (run ocaml link-gyp.ml)
-  (chdir vendor/libuv
-   (run python3 gyp_uv.py -f make -Duv_library=static_library))
-  (setenv CFLAGS -fPIC
-   (setenv BUILDTYPE Release
-    (run make -C vendor/libuv/out libuv)))
-  (run cp vendor/libuv/out/Release/libuv.a libuv.a)
-  (chdir vendor/libuv
-   (run python3 gyp_uv.py -f make -Duv_library=shared_library))
-  (setenv CFLAGS -fPIC
-   (setenv BUILDTYPE Release
-    (run make -C vendor/libuv/out libuv)))
-  (run ocaml copy-so.ml))))
+; (rule
+; (targets libuv.a dlluv.so)
+; (deps (source_tree vendor) link-gyp.ml copy-so.ml)
+; (action (progn
+;  (run ocaml link-gyp.ml)
+;  (chdir vendor/libuv
+;   (run python3 gyp_uv.py -f make -Duv_library=static_library))
+;  (setenv CFLAGS -fPIC
+;   (setenv BUILDTYPE Release
+;    (run make -C vendor/libuv/out libuv)))
+;  (run cp vendor/libuv/out/Release/libuv.a libuv.a)
+;  (chdir vendor/libuv
+;   (run python3 gyp_uv.py -f make -Duv_library=shared_library))
+;  (setenv CFLAGS -fPIC
+;   (setenv BUILDTYPE Release
+;    (run make -C vendor/libuv/out libuv)))
+;  (run ocaml copy-so.ml))))
 
-(data_only_dirs vendor)
+;(data_only_dirs vendor)
 
 
 
@@ -55,6 +59,9 @@
  (with-stdout-to generate_types_step_2.c
   (run ./generate_types_start.exe)))
 
+(rule (targets ctypes_path.txt)
+      (action (with-stdout-to %{targets} (run ocamlfind query ctypes))))
+      
 ; Based partially on
 ;   https://github.com/avsm/ocaml-yaml/blob/master/types/stubgen/jbuild#L20
 (rule
@@ -62,9 +69,9 @@
  (deps (:c generate_types_step_2.c) helpers.h)
  (action (bash "\
   %{cc} %{c} \
-  -I `dirname %{lib:ctypes:ctypes_cstubs_internals.h}` \
+  -I %{read-lines:ctypes_path.txt} \
   -I %{ocaml_where} \
-  -I vendor/libuv/include -o %{targets}")))
+  -I %{env:LIBUV_INCLUDE_PATH=vendor/include/libuv} -o %{targets}")))
 
 (rule
  (with-stdout-to luv_c_generated_types.ml
@@ -96,3 +103,10 @@
 (rule
  (with-stdout-to luv_c_generated_functions.ml
   (run ./generate_ml_functions.exe luv_stub)))
+
+    
+(rule
+    (targets c_flags.sexp flags.sexp)
+    (deps (:discover config/discover.exe))
+    (action (run %{discover})))
+
