Restore conversions between libuv and Unix fds
The conversions were originally removed in
705ec144a9f047260de8140583e88d016e33e061. This commit restores them, but
puts them into a separate opam package luv_unix. The conversions can be
accessed as, for example, Luv_unix.Os_fd.Fd.from_unix. The main package
Luv also provides "neater" paths Luv.Unix.Os_fd.Fd.from_unix through a
module alias.

Resolves #90.

In the future, luv_unix needs a constraint to require the next release
of Luv (probably 0.5.7). The module also needs to be linked from the API
docs.

--- a/.travis.yml
+++ b/.travis.yml
@@ -53,6 +53,11 @@ before_script:
     fi
   - opam list
 
+  # Work around https://github.com/ocaml/dune/issues/4121.
+  - git clone https://github.com/libuv/libuv.git
+  - sudo mv libuv/include/* /usr/include/
+  - rm -rf libuv
+
 script:
   - |
     case "$TRAVIS_OS_NAME" in
@@ -63,6 +68,10 @@ script:
   - '[ ! -d _cache/_build ] || cp -r _cache/_build .'
   - ${MAKE}
   - ${MAKE} test
+
+  # Undo workaround for https://github.com/ocaml/dune/issues/4121.
+  - rm -f /usr/include/uv.h
+
   - '[ "$REVDEPS" != yes ] || ${MAKE} --output-sync=target examples'
   - mkdir -p _cache
   - '[ -d _cache/_build ] || cp -r _build _cache'
