--- a/.travis.yml
+++ b/.travis.yml
@@ -63,7 +63,7 @@ script:
   - '[ ! -d _cache/_build ] || cp -r _cache/_build .'
   - ${MAKE}
   - ${MAKE} test
-  - '[ "$REVDEPS" != yes ] || ${MAKE} examples'
+  - '[ "$REVDEPS" != yes ] || ${MAKE} --output-sync=target examples'
   - mkdir -p _cache
   - '[ -d _cache/_build ] || cp -r _build _cache'
   - '[ "$REVDEPS" != yes ] || ${MAKE} test-installation-ci'
